Move scrollbar-gutter: stable to html, fixing flickering

--- a/webapp/assets/styles/main.scss
+++ b/webapp/assets/styles/main.scss
@@ -1,7 +1,7 @@
 @import './imports/_tooltip.scss';
 @import './imports/_toast.scss';
 
-body {
+html {
   scrollbar-gutter: stable;
 }
 
